detail page with virtual data

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -3,6 +3,7 @@
     "pages/home/home",
     "pages/order/order",
     "pages/cart/cart",
+    "pages/detail/detail",
     "pages/me/me"
   ],
   "window": {
